--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Lasse Stilvang</title>
+	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<h1>Lasse Stilvang</h1>
+		<p>My homepage: <a href="http://lassestilvang.com">http://lassestilvang.com</a></p>
 	</body>
 </html>
