--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 		<title>Lasse Stilvang</title>
+		<style>
+			body {
+				font-family: Helvetica, Arial, sans-serif;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Lasse Stilvang</h1>
