HTTPS in homepage link
Fixes #3

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	</head>
 	<body>
 		<h1>Lasse Stilvang</h1>
-		<p>My homepage: <a href="http://lassestilvang.com">http://lassestilvang.com</a></p>
+		<p>My homepage: <a href="https://lassestilvang.com">https://lassestilvang.com</a></p>
 	</body>
 </html>
