--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			This is just a playground for GitHub Pages and GitHub in general.</p>
 
 		<h4>Key Expertises</h4>
-		<p>PHP, MySQL, CSS, JavaScript, jQuery & Browser Quirks.</p>
+		<p>PHP, MySQL, CSS, JavaScript, Bootstrap, jQuery & Browser Quirks.</p>
 
 		<h4>My Personal Homepage</h4>
 		<p><a href="https://lassestilvang.com">https://lassestilvang.com</a></p>
